Launchpad automatic translations update.

--- a/po/stellarium/cv.po
+++ b/po/stellarium/cv.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-05-08 17:13+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-05-09 17:10+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Chuvash <cv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-09 04:41+0000\n"
+"X-Launchpad-Export-Date: 2012-05-10 05:17+0000\n"
 "X-Generator: Launchpad (build 15213)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -1586,7 +1586,7 @@ msgstr ""
 
 #: src/translations.h:204
 msgid "Andorra"
-msgstr ""
+msgstr "Андорра"
 
 #: src/translations.h:205
 msgid "United Arab Emirates"
@@ -1594,7 +1594,7 @@ msgstr ""
 
 #: src/translations.h:206
 msgid "Afghanistan"
-msgstr ""
+msgstr "Афганистан"
 
 #: src/translations.h:207
 msgid "Antigua and Barbuda"
@@ -1606,11 +1606,11 @@ msgstr ""
 
 #: src/translations.h:209
 msgid "Albania"
-msgstr ""
+msgstr "Албани"
 
 #: src/translations.h:210
 msgid "Armenia"
-msgstr ""
+msgstr "Эрмени"
 
 #: src/translations.h:211
 msgid "Netherlands Antilles"
@@ -1618,7 +1618,7 @@ msgstr ""
 
 #: src/translations.h:212
 msgid "Angola"
-msgstr ""
+msgstr "Ангола"
 
 #: src/translations.h:213
 msgid "Antarctica"
@@ -1626,7 +1626,7 @@ msgstr ""
 
 #: src/translations.h:214
 msgid "Argentina"
-msgstr ""
+msgstr "Аргентина"
 
 #: src/translations.h:215
 msgid "American Samoa"
@@ -1634,19 +1634,19 @@ msgstr ""
 
 #: src/translations.h:216
 msgid "Austria"
-msgstr ""
+msgstr "Австри"
 
 #: src/translations.h:217
 msgid "Australia"
-msgstr ""
+msgstr "Австрали"
 
 #: src/translations.h:218
 msgid "Aruba"
-msgstr ""
+msgstr "Аруба"
 
 #: src/translations.h:219
 msgid "Azerbaijan"
-msgstr ""
+msgstr "Азербайджан"
 
 #: src/translations.h:220
 msgid "Bosnia and Herzegowina"
@@ -1654,35 +1654,35 @@ msgstr ""
 
 #: src/translations.h:221
 msgid "Barbados"
-msgstr ""
+msgstr "Барбадос"
 
 #: src/translations.h:222
 msgid "Bangladesh"
-msgstr ""
+msgstr "Бангладеш"
 
 #: src/translations.h:223
 msgid "Belgium"
-msgstr ""
+msgstr "Бельги"
 
 #: src/translations.h:224
 msgid "Burkina Faso"
-msgstr ""
+msgstr "Буркина-Фасо"
 
 #: src/translations.h:225
 msgid "Bulgaria"
-msgstr ""
+msgstr "Болгари"
 
 #: src/translations.h:226
 msgid "Bahrain"
-msgstr ""
+msgstr "Бахрейн"
 
 #: src/translations.h:227
 msgid "Burundi"
-msgstr ""
+msgstr "Бурунди"
 
 #: src/translations.h:228
 msgid "Benin"
-msgstr ""
+msgstr "Бенин"
 
 #: src/translations.h:229
 msgid "Bermuda"
@@ -1690,15 +1690,15 @@ msgstr ""
 
 #: src/translations.h:230
 msgid "Brunei Darussalam"
-msgstr ""
+msgstr "Бруней Даруссалам"
 
 #: src/translations.h:231
 msgid "Bolivia"
-msgstr ""
+msgstr "Боливи"
 
 #: src/translations.h:232
 msgid "Brazil"
-msgstr ""
+msgstr "Бразили"
 
 #: src/translations.h:233
 msgid "Bahamas"
@@ -1706,7 +1706,7 @@ msgstr ""
 
 #: src/translations.h:234
 msgid "Bhutan"
-msgstr ""
+msgstr "Бутан"
 
 #: src/translations.h:235
 msgid "Bouvet Island"
@@ -1714,19 +1714,19 @@ msgstr ""
 
 #: src/translations.h:236
 msgid "Botswana"
-msgstr ""
+msgstr "Ботсвана"
 
 #: src/translations.h:237
 msgid "Belarus"
-msgstr ""
+msgstr "Беларусь"
 
 #: src/translations.h:238
 msgid "Belize"
-msgstr ""
+msgstr "Белиз"
 
 #: src/translations.h:239
 msgid "Canada"
-msgstr ""
+msgstr "Канада"
 
 #: src/translations.h:240
 msgid "Cocos Islands"
@@ -1738,11 +1738,11 @@ msgstr ""
 
 #: src/translations.h:242
 msgid "Central African Republic"
-msgstr ""
+msgstr "Вăтам Африка Республики"
 
 #: src/translations.h:243
 msgid "Republic of the Congo"
-msgstr ""
+msgstr "Конго Республики"
 
 #: src/translations.h:244
 msgid "Switzerland"
@@ -1758,23 +1758,23 @@ msgstr ""
 
 #: src/translations.h:247
 msgid "Chile"
-msgstr ""
+msgstr "Чили"
 
 #: src/translations.h:248
 msgid "Cameroon"
-msgstr ""
+msgstr "Камерун"
 
 #: src/translations.h:249
 msgid "China"
-msgstr ""
+msgstr "Китай"
 
 #: src/translations.h:250
 msgid "Colombia"
-msgstr ""
+msgstr "Колумби"
 
 #: src/translations.h:251
 msgid "Costa Rica"
-msgstr ""
+msgstr "Коста Рика"
 
 #: src/translations.h:252
 msgid "Serbia and Montenegro"
@@ -1782,11 +1782,11 @@ msgstr ""
 
 #: src/translations.h:253
 msgid "Cuba"
-msgstr ""
+msgstr "Куба"
 
 #: src/translations.h:254
 msgid "Cape Verde"
-msgstr ""
+msgstr "Кабо Верде"
 
 #: src/translations.h:255
 msgid "Christmas Island"
@@ -1794,11 +1794,11 @@ msgstr ""
 
 #: src/translations.h:256
 msgid "Cyprus"
-msgstr ""
+msgstr "Кипр"
 
 #: src/translations.h:257
 msgid "Czech Republic"
-msgstr ""
+msgstr "Чехи"
 
 #: src/translations.h:258
 msgid "Germany"
@@ -1806,15 +1806,15 @@ msgstr ""
 
 #: src/translations.h:259
 msgid "Djibouti"
-msgstr ""
+msgstr "Джибути"
 
 #: src/translations.h:260
 msgid "Denmark"
-msgstr ""
+msgstr "Дани"
 
 #: src/translations.h:261
 msgid "Dominica"
-msgstr ""
+msgstr "Доминика"
 
 #: src/translations.h:262
 msgid "Dominican Republic"
@@ -1822,7 +1822,7 @@ msgstr ""
 
 #: src/translations.h:263
 msgid "Algeria"
-msgstr ""
+msgstr "Алжир"
 
 #: src/translations.h:264
 msgid "Ecuador"
@@ -1962,7 +1962,7 @@ msgstr ""
 
 #: src/translations.h:298
 msgid "Croatia"
-msgstr ""
+msgstr "Хорвати"
 
 #: src/translations.h:299
 msgid "Haiti"
@@ -2030,7 +2030,7 @@ msgstr ""
 
 #: src/translations.h:315
 msgid "Cambodia"
-msgstr ""
+msgstr "Камбоджа"
 
 #: src/translations.h:316
 msgid "Kiribati"
@@ -2406,7 +2406,7 @@ msgstr ""
 
 #: src/translations.h:409
 msgid "Chad"
-msgstr ""
+msgstr "Чад"
 
 #: src/translations.h:410
 msgid "French Southern Territories"
@@ -2550,16 +2550,16 @@ msgstr ""
 
 #: src/ui_dateTimeDialogGui.h:296 src/ui_dateTimeDialogGui.h:297
 msgid "/"
-msgstr ""
+msgstr "/"
 
 #: src/ui_dateTimeDialogGui.h:298 src/ui_dateTimeDialogGui.h:299
 msgid ":"
-msgstr ""
+msgstr ":"
 
 #: src/ui_helpDialogGui.h:259 src/ui_helpDialogGui.h:265
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:422
 msgid "Help"
-msgstr ""
+msgstr "Пулăшу"
 
 #: src/ui_helpDialogGui.h:267 plugins/Oculars/src/ui_ocularDialog.h:903
 #: plugins/Satellites/src/ui_satellitesDialog.h:718
@@ -2567,7 +2567,7 @@ msgstr ""
 #: plugins/TimeZoneConfiguration/src/ui_timeZoneConfigurationWindow.h:408
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:313
 msgid "About"
-msgstr ""
+msgstr "çинчен"
 
 #: src/ui_helpDialogGui.h:269
 msgid "Log"
@@ -2580,7 +2580,7 @@ msgstr ""
 #: src/ui_locationDialogGui.h:384
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:134
 msgid "Location"
-msgstr ""
+msgstr "Вырӑн"
 
 #: src/ui_locationDialogGui.h:388
 msgid "Current location information"
@@ -2603,7 +2603,7 @@ msgstr ""
 #: src/ui_locationDialogGui.h:392
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:135
 msgid "Latitude:"
-msgstr ""
+msgstr "Anlăhĕ:"
 
 #: src/ui_locationDialogGui.h:394 src/ui_locationDialogGui.h:398
 msgid ""
@@ -2614,7 +2614,7 @@ msgstr ""
 #: src/ui_locationDialogGui.h:396
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:138
 msgid "Longitude:"
-msgstr ""
+msgstr "Vărămlăhĕ:"
 
 #: src/ui_locationDialogGui.h:400
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:141
@@ -2635,7 +2635,7 @@ msgstr ""
 
 #: src/ui_locationDialogGui.h:406
 msgid "Country:"
-msgstr ""
+msgstr "Patšalăhĕ:"
 
 #: src/ui_locationDialogGui.h:407
 msgid "Planet:"
@@ -2884,23 +2884,23 @@ msgstr ""
 
 #: src/ui_viewDialog.h:1143
 msgid "0"
-msgstr ""
+msgstr "0"
 
 #: src/ui_viewDialog.h:1144
 msgid "10"
-msgstr ""
+msgstr "10"
 
 #: src/ui_viewDialog.h:1145
 msgid "80"
-msgstr ""
+msgstr "80"
 
 #: src/ui_viewDialog.h:1146
 msgid "10000"
-msgstr ""
+msgstr "10000"
 
 #: src/ui_viewDialog.h:1147
 msgid "144000"
-msgstr ""
+msgstr "144000"
 
 #: src/ui_viewDialog.h:1149
 msgid "Constellations"
@@ -3026,7 +3026,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:804
 msgid "None"
-msgstr ""
+msgstr "Çук"
 
 #: src/ui_configurationDialog.h:805
 msgid "Default options"
@@ -3219,7 +3219,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:886
 msgid "Retry"
-msgstr ""
+msgstr "Tepĕr hut"
 
 #: src/ui_configurationDialog.h:888
 msgid "Stop the download. You can always restart it later"
@@ -3228,7 +3228,7 @@ msgstr ""
 #: src/ui_configurationDialog.h:890
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:518
 msgid "Cancel"
-msgstr ""
+msgstr "Пăрахăçла"
 
 #: src/ui_configurationDialog.h:893
 msgid "Close window when script runs"
@@ -3295,7 +3295,7 @@ msgstr ""
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:411
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:309
 msgid "Remove"
-msgstr ""
+msgstr "Кăлар"
 
 #: src/ui_addRemoveLandscapesDialog.h:276
 msgid ""
@@ -3491,7 +3491,7 @@ msgstr ""
 
 #: src/ui_scriptConsole.h:378
 msgid "..."
-msgstr ""
+msgstr "..."
 
 #: plugins/AngleMeasure/src/AngleMeasure.cpp:57
 msgid "Angle Measure"
@@ -3804,7 +3804,7 @@ msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:871
 msgid "Interface"
-msgstr ""
+msgstr "Интерфейс"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:872
 msgid "On-screen control panel"
@@ -3813,7 +3813,7 @@ msgstr ""
 #: plugins/Oculars/src/ui_ocularDialog.h:873
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:214
 msgid "General"
-msgstr ""
+msgstr "Tĕp"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:874
 #: plugins/Oculars/src/ui_ocularDialog.h:882
@@ -3834,7 +3834,7 @@ msgstr ""
 #: plugins/Satellites/src/ui_satellitesDialog.h:683
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:485
 msgid "Name:"
-msgstr ""
+msgstr "Jacĕ:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:878
 msgid "aFOV:"
@@ -4001,7 +4001,7 @@ msgstr ""
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:259
 msgid "Version"
-msgstr ""
+msgstr "Верси"
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:263
 msgid ""
