--- a/po/stellarium/haw.po
+++ b/po/stellarium/haw.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium 0.8.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2010-01-28 20:20+0000\n"
-"Last-Translator: Rob Spearman <rob@digitaliseducation.com>\n"
+"PO-Revision-Date: 2012-05-09 17:21+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: English <en@translate.freefriends.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-04 04:40+0000\n"
-"X-Generator: Launchpad (build 15195)\n"
+"X-Launchpad-Export-Date: 2012-05-10 05:17+0000\n"
+"X-Generator: Launchpad (build 15213)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1726,7 +1726,7 @@ msgstr ""
 
 #: src/translations.h:239
 msgid "Canada"
-msgstr ""
+msgstr "Kanakā"
 
 #: src/translations.h:240
 msgid "Cocos Islands"
@@ -1766,7 +1766,7 @@ msgstr ""
 
 #: src/translations.h:249
 msgid "China"
-msgstr ""
+msgstr "Kina"
 
 #: src/translations.h:250
 msgid "Colombia"
@@ -1802,7 +1802,7 @@ msgstr ""
 
 #: src/translations.h:258
 msgid "Germany"
-msgstr ""
+msgstr "Kelemānia"
 
 #: src/translations.h:259
 msgid "Djibouti"
@@ -1810,7 +1810,7 @@ msgstr ""
 
 #: src/translations.h:260
 msgid "Denmark"
-msgstr ""
+msgstr "Kenemaka"
 
 #: src/translations.h:261
 msgid "Dominica"
@@ -1822,7 +1822,7 @@ msgstr ""
 
 #: src/translations.h:263
 msgid "Algeria"
-msgstr ""
+msgstr "ʻAlekelia"
 
 #: src/translations.h:264
 msgid "Ecuador"
@@ -1846,7 +1846,7 @@ msgstr ""
 
 #: src/translations.h:269
 msgid "Spain"
-msgstr ""
+msgstr "Kepania"
 
 #: src/translations.h:270
 msgid "Ethiopia"
@@ -1874,7 +1874,7 @@ msgstr ""
 
 #: src/translations.h:276
 msgid "France"
-msgstr ""
+msgstr "Palani"
 
 #: src/translations.h:277
 msgid "Gabon"
@@ -1882,7 +1882,7 @@ msgstr ""
 
 #: src/translations.h:278
 msgid "United Kingdom"
-msgstr ""
+msgstr "Aupuni Mōʻī Hui Pū ʻIa"
 
 #: src/translations.h:279
 msgid "Grenada"
@@ -1926,7 +1926,7 @@ msgstr ""
 
 #: src/translations.h:289
 msgid "Greece"
-msgstr ""
+msgstr "Helene"
 
 #: src/translations.h:290
 msgid "South Georgia and the South Sandwich Islands"
@@ -1978,15 +1978,15 @@ msgstr ""
 
 #: src/translations.h:302
 msgid "Ireland"
-msgstr ""
+msgstr "ʻIlelani"
 
 #: src/translations.h:303
 msgid "Israel"
-msgstr ""
+msgstr "ʻIseraʻela"
 
 #: src/translations.h:304
 msgid "India"
-msgstr ""
+msgstr "ʻĪnia"
 
 #: src/translations.h:305
 msgid "British Indian Ocean Territory"
@@ -2006,7 +2006,7 @@ msgstr ""
 
 #: src/translations.h:309
 msgid "Italy"
-msgstr ""
+msgstr "ʻĪkālia"
 
 #: src/translations.h:310
 msgid "Jamaica"
@@ -2018,7 +2018,7 @@ msgstr ""
 
 #: src/translations.h:312
 msgid "Japan"
-msgstr ""
+msgstr "Iāpana"
 
 #: src/translations.h:313
 msgid "Kenya"
@@ -2182,7 +2182,7 @@ msgstr ""
 
 #: src/translations.h:353
 msgid "Mexico"
-msgstr ""
+msgstr "Mekiko"
 
 #: src/translations.h:354
 msgid "Malaysia"
@@ -2218,7 +2218,7 @@ msgstr ""
 
 #: src/translations.h:362
 msgid "Netherlands"
-msgstr ""
+msgstr "Hōlani"
 
 #: src/translations.h:363
 msgid "Norway"
@@ -2238,7 +2238,7 @@ msgstr ""
 
 #: src/translations.h:367
 msgid "New Zealand"
-msgstr ""
+msgstr "Aotearoa"
 
 #: src/translations.h:368
 msgid "Oman"
@@ -2262,7 +2262,7 @@ msgstr ""
 
 #: src/translations.h:373
 msgid "Philippines"
-msgstr ""
+msgstr "ʻĀina Pilipino"
 
 #: src/translations.h:374
 msgid "Pakistan"
@@ -2478,7 +2478,7 @@ msgstr ""
 
 #: src/translations.h:427
 msgid "United States"
-msgstr ""
+msgstr "ʻAmelika Hui Pū ʻIa"
 
 #: src/translations.h:428
 msgid "Uruguay"
