--- a/po/stellarium/ky.po
+++ b/po/stellarium/ky.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-04-19 18:08+0000\n"
-"Last-Translator: chingis <chingis091@gmail.com>\n"
+"PO-Revision-Date: 2012-05-09 17:48+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-04 04:41+0000\n"
-"X-Generator: Launchpad (build 15195)\n"
+"X-Launchpad-Export-Date: 2012-05-10 05:17+0000\n"
+"X-Generator: Launchpad (build 15213)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1586,7 +1586,7 @@ msgstr ""
 
 #: src/translations.h:204
 msgid "Andorra"
-msgstr ""
+msgstr "Андорра"
 
 #: src/translations.h:205
 msgid "United Arab Emirates"
@@ -1622,7 +1622,7 @@ msgstr ""
 
 #: src/translations.h:213
 msgid "Antarctica"
-msgstr ""
+msgstr "Антарктика"
 
 #: src/translations.h:214
 msgid "Argentina"
@@ -1706,7 +1706,7 @@ msgstr ""
 
 #: src/translations.h:234
 msgid "Bhutan"
-msgstr ""
+msgstr "Бутан"
 
 #: src/translations.h:235
 msgid "Bouvet Island"
@@ -1766,7 +1766,7 @@ msgstr ""
 
 #: src/translations.h:249
 msgid "China"
-msgstr ""
+msgstr "Кытай"
 
 #: src/translations.h:250
 msgid "Colombia"
@@ -1802,15 +1802,15 @@ msgstr ""
 
 #: src/translations.h:258
 msgid "Germany"
-msgstr ""
+msgstr "Германия"
 
 #: src/translations.h:259
 msgid "Djibouti"
-msgstr ""
+msgstr "Джибути"
 
 #: src/translations.h:260
 msgid "Denmark"
-msgstr ""
+msgstr "Дания"
 
 #: src/translations.h:261
 msgid "Dominica"
@@ -1830,7 +1830,7 @@ msgstr ""
 
 #: src/translations.h:265
 msgid "Estonia"
-msgstr ""
+msgstr "Эстония"
 
 #: src/translations.h:266
 msgid "Egypt"
@@ -1850,11 +1850,11 @@ msgstr ""
 
 #: src/translations.h:270
 msgid "Ethiopia"
-msgstr ""
+msgstr "Эфиопия"
 
 #: src/translations.h:271
 msgid "Finland"
-msgstr ""
+msgstr "Финляндия"
 
 #: src/translations.h:272
 msgid "Fiji"
@@ -1874,7 +1874,7 @@ msgstr ""
 
 #: src/translations.h:276
 msgid "France"
-msgstr ""
+msgstr "Франция"
 
 #: src/translations.h:277
 msgid "Gabon"
@@ -1882,7 +1882,7 @@ msgstr ""
 
 #: src/translations.h:278
 msgid "United Kingdom"
-msgstr ""
+msgstr "Англис (Улуу Британия)"
 
 #: src/translations.h:279
 msgid "Grenada"
@@ -1890,7 +1890,7 @@ msgstr ""
 
 #: src/translations.h:280
 msgid "Georgia"
-msgstr ""
+msgstr "Грузия"
 
 #: src/translations.h:281
 msgid "French Guiana"
@@ -1898,11 +1898,11 @@ msgstr ""
 
 #: src/translations.h:282
 msgid "Ghana"
-msgstr ""
+msgstr "Гана"
 
 #: src/translations.h:283
 msgid "Gibraltar"
-msgstr ""
+msgstr "Гибралтар"
 
 #: src/translations.h:284
 msgid "Greenland"
@@ -1914,7 +1914,7 @@ msgstr ""
 
 #: src/translations.h:286
 msgid "Guinea"
-msgstr ""
+msgstr "Гвинея"
 
 #: src/translations.h:287
 msgid "Guadeloupe"
@@ -1926,7 +1926,7 @@ msgstr ""
 
 #: src/translations.h:289
 msgid "Greece"
-msgstr ""
+msgstr "Греция"
 
 #: src/translations.h:290
 msgid "South Georgia and the South Sandwich Islands"
@@ -1934,7 +1934,7 @@ msgstr ""
 
 #: src/translations.h:291
 msgid "Guatemala"
-msgstr ""
+msgstr "Гватемала"
 
 #: src/translations.h:292
 msgid "Guam"
@@ -1970,7 +1970,7 @@ msgstr ""
 
 #: src/translations.h:300
 msgid "Hungary"
-msgstr ""
+msgstr "Венгрия"
 
 #: src/translations.h:301
 msgid "Indonesia"
@@ -1978,15 +1978,15 @@ msgstr ""
 
 #: src/translations.h:302
 msgid "Ireland"
-msgstr ""
+msgstr "Ирландия"
 
 #: src/translations.h:303
 msgid "Israel"
-msgstr ""
+msgstr "Израиль"
 
 #: src/translations.h:304
 msgid "India"
-msgstr ""
+msgstr "Индия"
 
 #: src/translations.h:305
 msgid "British Indian Ocean Territory"
@@ -1994,19 +1994,19 @@ msgstr ""
 
 #: src/translations.h:306
 msgid "Iraq"
-msgstr ""
+msgstr "Ирак"
 
 #: src/translations.h:307
 msgid "Iran"
-msgstr ""
+msgstr "Иран"
 
 #: src/translations.h:308
 msgid "Iceland"
-msgstr ""
+msgstr "Исландия"
 
 #: src/translations.h:309
 msgid "Italy"
-msgstr ""
+msgstr "Италия"
 
 #: src/translations.h:310
 msgid "Jamaica"
@@ -2014,11 +2014,11 @@ msgstr ""
 
 #: src/translations.h:311
 msgid "Jordan"
-msgstr ""
+msgstr "Иордания"
 
 #: src/translations.h:312
 msgid "Japan"
-msgstr ""
+msgstr "Япония"
 
 #: src/translations.h:313
 msgid "Kenya"
@@ -2026,11 +2026,11 @@ msgstr ""
 
 #: src/translations.h:314
 msgid "Kyrgyzstan"
-msgstr ""
+msgstr "Кыргызстан"
 
 #: src/translations.h:315
 msgid "Cambodia"
-msgstr ""
+msgstr "Камбоджия"
 
 #: src/translations.h:316
 msgid "Kiribati"
@@ -2054,7 +2054,7 @@ msgstr ""
 
 #: src/translations.h:321
 msgid "Kuwait"
-msgstr ""
+msgstr "Кувейт"
 
 #: src/translations.h:322
 msgid "Cayman Islands"
@@ -2062,15 +2062,15 @@ msgstr ""
 
 #: src/translations.h:323
 msgid "Kazakhstan"
-msgstr ""
+msgstr "Казахстан"
 
 #: src/translations.h:324
 msgid "Lao"
-msgstr ""
+msgstr "Лао"
 
 #: src/translations.h:325
 msgid "Lebanon"
-msgstr ""
+msgstr "Ливан"
 
 #: src/translations.h:326
 msgid "Saint Lucia"
@@ -2082,11 +2082,11 @@ msgstr ""
 
 #: src/translations.h:328
 msgid "Sri Lanka"
-msgstr ""
+msgstr "Шри Ланка"
 
 #: src/translations.h:329
 msgid "Liberia"
-msgstr ""
+msgstr "Либерия"
 
 #: src/translations.h:330
 msgid "Lesotho"
@@ -2094,15 +2094,15 @@ msgstr ""
 
 #: src/translations.h:331
 msgid "Lithuania"
-msgstr ""
+msgstr "Литва"
 
 #: src/translations.h:332
 msgid "Luxembourg"
-msgstr ""
+msgstr "Люксембург"
 
 #: src/translations.h:333
 msgid "Latvia"
-msgstr ""
+msgstr "Латвия"
 
 #: src/translations.h:334
 msgid "Libyan Arab Jamahiriya"
@@ -2110,7 +2110,7 @@ msgstr ""
 
 #: src/translations.h:335
 msgid "Morocco"
-msgstr ""
+msgstr "Морокко"
 
 #: src/translations.h:336
 msgid "Monaco"
@@ -2130,7 +2130,7 @@ msgstr ""
 
 #: src/translations.h:340
 msgid "Macedonia"
-msgstr ""
+msgstr "Македония"
 
 #: src/translations.h:341
 msgid "Mali"
@@ -2138,15 +2138,15 @@ msgstr ""
 
 #: src/translations.h:342
 msgid "Myanmar"
-msgstr ""
+msgstr "Мьянмар"
 
 #: src/translations.h:343
 msgid "Mongolia"
-msgstr ""
+msgstr "Монголия"
 
 #: src/translations.h:344
 msgid "Macau"
-msgstr ""
+msgstr "Макао"
 
 #: src/translations.h:345
 msgid "Northern Mariana Islands"
@@ -2166,7 +2166,7 @@ msgstr ""
 
 #: src/translations.h:349
 msgid "Malta"
-msgstr ""
+msgstr "Мальта"
 
 #: src/translations.h:350
 msgid "Mauritius"
@@ -2174,7 +2174,7 @@ msgstr ""
 
 #: src/translations.h:351
 msgid "Maldives"
-msgstr ""
+msgstr "Мальдивалар"
 
 #: src/translations.h:352
 msgid "Malawi"
@@ -2210,7 +2210,7 @@ msgstr ""
 
 #: src/translations.h:360
 msgid "Nigeria"
-msgstr ""
+msgstr "Нигерия"
 
 #: src/translations.h:361
 msgid "Nicaragua"
@@ -2218,15 +2218,15 @@ msgstr ""
 
 #: src/translations.h:362
 msgid "Netherlands"
-msgstr ""
+msgstr "Нидерландия"
 
 #: src/translations.h:363
 msgid "Norway"
-msgstr ""
+msgstr "Норвегия"
 
 #: src/translations.h:364
 msgid "Nepal"
-msgstr ""
+msgstr "Непал"
 
 #: src/translations.h:365
 msgid "Nauru"
@@ -2250,7 +2250,7 @@ msgstr ""
 
 #: src/translations.h:370
 msgid "Peru"
-msgstr ""
+msgstr "Перу"
 
 #: src/translations.h:371
 msgid "French Polynesia"
@@ -2314,7 +2314,7 @@ msgstr ""
 
 #: src/translations.h:386
 msgid "Serbia"
-msgstr ""
+msgstr "Сербия"
 
 #: src/translations.h:387
 msgid "Russian Federation"
@@ -2346,7 +2346,7 @@ msgstr ""
 
 #: src/translations.h:394
 msgid "Singapore"
-msgstr ""
+msgstr "Сингапур"
 
 #: src/translations.h:395
 msgid "Saint Helena"
@@ -2418,11 +2418,11 @@ msgstr ""
 
 #: src/translations.h:412
 msgid "Thailand"
-msgstr ""
+msgstr "Тайланд"
 
 #: src/translations.h:413
 msgid "Tajikistan"
-msgstr ""
+msgstr "Таджикистан"
 
 #: src/translations.h:414
 msgid "Tokelau"
@@ -2434,7 +2434,7 @@ msgstr ""
 
 #: src/translations.h:416
 msgid "Turkmenistan"
-msgstr ""
+msgstr "Түркменистан"
 
 #: src/translations.h:417
 msgid "Tunisia"
@@ -2446,7 +2446,7 @@ msgstr ""
 
 #: src/translations.h:419
 msgid "Turkey"
-msgstr ""
+msgstr "Турция"
 
 #: src/translations.h:420
 msgid "Trinidad and Tobago"
@@ -2486,7 +2486,7 @@ msgstr ""
 
 #: src/translations.h:429
 msgid "Uzbekistan"
-msgstr ""
+msgstr "Өзбекистан"
 
 #: src/translations.h:430
 msgid "Vatican City State"
@@ -2522,7 +2522,7 @@ msgstr ""
 
 #: src/translations.h:438
 msgid "Samoa"
-msgstr ""
+msgstr "Самоа"
 
 #: src/translations.h:439
 msgid "Yemen"
@@ -2550,16 +2550,16 @@ msgstr ""
 
 #: src/ui_dateTimeDialogGui.h:296 src/ui_dateTimeDialogGui.h:297
 msgid "/"
-msgstr ""
+msgstr "/"
 
 #: src/ui_dateTimeDialogGui.h:298 src/ui_dateTimeDialogGui.h:299
 msgid ":"
-msgstr ""
+msgstr ":"
 
 #: src/ui_helpDialogGui.h:259 src/ui_helpDialogGui.h:265
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:422
 msgid "Help"
-msgstr ""
+msgstr "Жардам"
 
 #: src/ui_helpDialogGui.h:267 plugins/Oculars/src/ui_ocularDialog.h:903
 #: plugins/Satellites/src/ui_satellitesDialog.h:718
@@ -2575,12 +2575,12 @@ msgstr ""
 
 #: src/ui_helpDialogGui.h:272
 msgid "Refresh"
-msgstr ""
+msgstr "Жаңылоо"
 
 #: src/ui_locationDialogGui.h:384
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:134
 msgid "Location"
-msgstr ""
+msgstr "Жайгашуу"
 
 #: src/ui_locationDialogGui.h:388
 msgid "Current location information"
@@ -2594,7 +2594,7 @@ msgstr ""
 #: plugins/Oculars/src/ui_ocularDialog.h:885
 #: plugins/Oculars/src/ui_ocularDialog.h:896
 msgid "Delete"
-msgstr ""
+msgstr "Өчүрүү"
 
 #: src/ui_locationDialogGui.h:391
 msgid "Add to list"
@@ -2778,7 +2778,7 @@ msgstr ""
 #: src/ui_configurationDialog.h:891 src/ui_configurationDialog.h:902
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:421
 msgid "Options"
-msgstr ""
+msgstr "Параметрлер"
 
 #: src/ui_viewDialog.h:1101
 msgid "View"
@@ -2795,7 +2795,7 @@ msgstr ""
 #: src/ui_viewDialog.h:1111
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:395
 msgid "Landscape"
-msgstr ""
+msgstr "альбомдук"
 
 #: src/ui_viewDialog.h:1113
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:217
@@ -2872,7 +2872,7 @@ msgstr ""
 
 #: src/ui_viewDialog.h:1140
 msgid "Planets"
-msgstr ""
+msgstr "Планеталар"
 
 #: src/ui_viewDialog.h:1141
 msgid "Shooting Stars"
@@ -2884,23 +2884,23 @@ msgstr ""
 
 #: src/ui_viewDialog.h:1143
 msgid "0"
-msgstr ""
+msgstr "0"
 
 #: src/ui_viewDialog.h:1144
 msgid "10"
-msgstr ""
+msgstr "10"
 
 #: src/ui_viewDialog.h:1145
 msgid "80"
-msgstr ""
+msgstr "80"
 
 #: src/ui_viewDialog.h:1146
 msgid "10000"
-msgstr ""
+msgstr "10000"
 
 #: src/ui_viewDialog.h:1147
 msgid "144000"
-msgstr ""
+msgstr "144000"
 
 #: src/ui_viewDialog.h:1149
 msgid "Constellations"
@@ -2982,7 +2982,7 @@ msgstr ""
 
 #: src/ui_viewDialog.h:1192
 msgid "Visible"
-msgstr ""
+msgstr "Көрүнүп турган"
 
 #: src/ui_configurationDialog.h:785
 msgid "Configuration"
