--- a/po/stellarium/la.po
+++ b/po/stellarium/la.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-05-08 17:51+0000\n"
+"PO-Revision-Date: 2012-05-09 18:18+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Latin <la@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-09 04:42+0000\n"
+"X-Launchpad-Export-Date: 2012-05-10 05:18+0000\n"
 "X-Generator: Launchpad (build 15213)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -39,7 +39,7 @@ msgstr ""
 
 #: src/core/modules/LandscapeMgr.cpp:493
 msgid "Author: "
-msgstr ""
+msgstr "Auctor: "
 
 #: src/core/modules/LandscapeMgr.cpp:496
 msgid "Location: "
@@ -103,7 +103,7 @@ msgstr ""
 
 #: src/core/modules/Nebula.cpp:321
 msgid "Unknown"
-msgstr ""
+msgstr "Ignotum"
 
 #: src/core/modules/Nebula.cpp:324
 msgid "Undocumented type"
@@ -337,11 +337,11 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Erratum"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "Inventum non est"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
@@ -364,19 +364,19 @@ msgstr ""
 #: src/gui/ConfigurationDialog.cpp:570
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:260
 msgid "Authors"
-msgstr ""
+msgstr "Auctores"
 
 #: src/gui/ConfigurationDialog.cpp:574 src/gui/ViewDialog.cpp:398
 msgid "Contact"
-msgstr ""
+msgstr "Conferre"
 
 #: src/gui/ConfigurationDialog.cpp:652
 msgid "Author"
-msgstr ""
+msgstr "Auctore"
 
 #: src/gui/ConfigurationDialog.cpp:656
 msgid "License"
-msgstr ""
+msgstr "Licentia"
 
 #: src/gui/ConfigurationDialog.cpp:686
 msgid "Running script: "
@@ -481,7 +481,7 @@ msgstr ""
 
 #: src/gui/HelpDialog.cpp:66 src/gui/HelpDialog.cpp:68
 msgid "Clear selection"
-msgstr ""
+msgstr "Selecta purgare"
 
 #: src/gui/HelpDialog.cpp:71
 msgid "When a Script is Running"
@@ -573,7 +573,7 @@ msgstr ""
 
 #: src/gui/HelpDialog.cpp:298
 msgid "Developers"
-msgstr ""
+msgstr "Creatores"
 
 #: src/gui/HelpDialog.cpp:299
 #, qt-format
@@ -592,7 +592,7 @@ msgstr ""
 #: src/gui/HelpDialog.cpp:314
 #, qt-format
 msgid "Developer: %1"
-msgstr ""
+msgstr "Creatore: %1"
 
 #: src/gui/HelpDialog.cpp:306 src/gui/HelpDialog.cpp:307
 #, qt-format
@@ -754,7 +754,7 @@ msgstr ""
 
 #: src/gui/StelGui.cpp:136
 msgid "Windows"
-msgstr ""
+msgstr "Fenestrae"
 
 #: src/gui/StelGui.cpp:137
 msgid "Help window"
@@ -899,7 +899,7 @@ msgstr ""
 
 #: src/gui/StelGui.cpp:182
 msgid "Quit"
-msgstr ""
+msgstr "Desistere"
 
 #: src/gui/StelGui.cpp:183
 msgid "Save screenshot"
@@ -987,7 +987,7 @@ msgstr ""
 #: src/gui/AddRemoveLandscapesDialog.cpp:229
 #: src/gui/AddRemoveLandscapesDialog.cpp:239
 msgid "Error!"
-msgstr ""
+msgstr "Errata!"
 
 #: src/gui/AddRemoveLandscapesDialog.cpp:154
 #, qt-format
@@ -1437,7 +1437,7 @@ msgstr ""
 
 #: src/translations.h:145
 msgid "Arabic"
-msgstr ""
+msgstr "Arabica"
 
 #: src/translations.h:146
 msgid "Aztec"
@@ -1445,7 +1445,7 @@ msgstr ""
 
 #: src/translations.h:147
 msgid "Chinese"
-msgstr ""
+msgstr "Sinica"
 
 #: src/translations.h:148
 msgid "Egyptian"
@@ -1457,7 +1457,7 @@ msgstr ""
 
 #: src/translations.h:150
 msgid "Korean"
-msgstr ""
+msgstr "Coreana"
 
 #: src/translations.h:151
 msgid "Lakota"
@@ -1465,7 +1465,7 @@ msgstr ""
 
 #: src/translations.h:152
 msgid "Maori"
-msgstr ""
+msgstr "Maoriana"
 
 #: src/translations.h:153
 msgid "Navajo"
@@ -1489,7 +1489,7 @@ msgstr ""
 
 #: src/translations.h:158
 msgid "Western"
-msgstr ""
+msgstr "Occidentalis"
 
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:162
@@ -1586,7 +1586,7 @@ msgstr ""
 
 #: src/translations.h:204
 msgid "Andorra"
-msgstr ""
+msgstr "Andorra"
 
 #: src/translations.h:205
 msgid "United Arab Emirates"
@@ -1594,7 +1594,7 @@ msgstr ""
 
 #: src/translations.h:206
 msgid "Afghanistan"
-msgstr ""
+msgstr "Afgania"
 
 #: src/translations.h:207
 msgid "Antigua and Barbuda"
@@ -1606,7 +1606,7 @@ msgstr ""
 
 #: src/translations.h:209
 msgid "Albania"
-msgstr ""
+msgstr "Albania"
 
 #: src/translations.h:210
 msgid "Armenia"
@@ -1630,7 +1630,7 @@ msgstr ""
 
 #: src/translations.h:215
 msgid "American Samoa"
-msgstr ""
+msgstr "Samoa Americana"
 
 #: src/translations.h:216
 msgid "Austria"
@@ -1726,7 +1726,7 @@ msgstr ""
 
 #: src/translations.h:239
 msgid "Canada"
-msgstr ""
+msgstr "Canada"
 
 #: src/translations.h:240
 msgid "Cocos Islands"
@@ -1802,7 +1802,7 @@ msgstr ""
 
 #: src/translations.h:258
 msgid "Germany"
-msgstr ""
+msgstr "Germania"
 
 #: src/translations.h:259
 msgid "Djibouti"
@@ -1822,7 +1822,7 @@ msgstr ""
 
 #: src/translations.h:263
 msgid "Algeria"
-msgstr ""
+msgstr "Algeria"
 
 #: src/translations.h:264
 msgid "Ecuador"
@@ -1874,7 +1874,7 @@ msgstr ""
 
 #: src/translations.h:276
 msgid "France"
-msgstr ""
+msgstr "Francia"
 
 #: src/translations.h:277
 msgid "Gabon"
@@ -1882,7 +1882,7 @@ msgstr ""
 
 #: src/translations.h:278
 msgid "United Kingdom"
-msgstr ""
+msgstr "Britannia"
 
 #: src/translations.h:279
 msgid "Grenada"
@@ -1906,7 +1906,7 @@ msgstr ""
 
 #: src/translations.h:284
 msgid "Greenland"
-msgstr ""
+msgstr "Mundus graminis"
 
 #: src/translations.h:285
 msgid "Gambia"
@@ -2066,7 +2066,7 @@ msgstr ""
 
 #: src/translations.h:324
 msgid "Lao"
-msgstr ""
+msgstr "Lingua Laotiana"
 
 #: src/translations.h:325
 msgid "Lebanon"
@@ -2290,7 +2290,7 @@ msgstr ""
 
 #: src/translations.h:380
 msgid "Portugal"
-msgstr ""
+msgstr "Lusitania"
 
 #: src/translations.h:381
 msgid "Palau"
@@ -2426,7 +2426,7 @@ msgstr ""
 
 #: src/translations.h:414
 msgid "Tokelau"
-msgstr ""
+msgstr "Tokelauana"
 
 #: src/translations.h:415
 msgid "East Timor"
@@ -2454,7 +2454,7 @@ msgstr ""
 
 #: src/translations.h:421
 msgid "Tuvalu"
-msgstr ""
+msgstr "Tuvaluana"
 
 #: src/translations.h:422
 msgid "Taiwan"
@@ -2550,16 +2550,16 @@ msgstr ""
 
 #: src/ui_dateTimeDialogGui.h:296 src/ui_dateTimeDialogGui.h:297
 msgid "/"
-msgstr ""
+msgstr "/"
 
 #: src/ui_dateTimeDialogGui.h:298 src/ui_dateTimeDialogGui.h:299
 msgid ":"
-msgstr ""
+msgstr ":"
 
 #: src/ui_helpDialogGui.h:259 src/ui_helpDialogGui.h:265
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:422
 msgid "Help"
-msgstr ""
+msgstr "Auxilium"
 
 #: src/ui_helpDialogGui.h:267 plugins/Oculars/src/ui_ocularDialog.h:903
 #: plugins/Satellites/src/ui_satellitesDialog.h:718
@@ -2567,7 +2567,7 @@ msgstr ""
 #: plugins/TimeZoneConfiguration/src/ui_timeZoneConfigurationWindow.h:408
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:313
 msgid "About"
-msgstr ""
+msgstr "De hac re"
 
 #: src/ui_helpDialogGui.h:269
 msgid "Log"
@@ -2594,7 +2594,7 @@ msgstr ""
 #: plugins/Oculars/src/ui_ocularDialog.h:885
 #: plugins/Oculars/src/ui_ocularDialog.h:896
 msgid "Delete"
-msgstr ""
+msgstr "Delere"
 
 #: src/ui_locationDialogGui.h:391
 msgid "Add to list"
@@ -2778,11 +2778,11 @@ msgstr ""
 #: src/ui_configurationDialog.h:891 src/ui_configurationDialog.h:902
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:421
 msgid "Options"
-msgstr ""
+msgstr "Optiones"
 
 #: src/ui_viewDialog.h:1101
 msgid "View"
-msgstr ""
+msgstr "Videre"
 
 #: src/ui_viewDialog.h:1107
 msgid "Sky"
@@ -2884,23 +2884,23 @@ msgstr ""
 
 #: src/ui_viewDialog.h:1143
 msgid "0"
-msgstr ""
+msgstr "0"
 
 #: src/ui_viewDialog.h:1144
 msgid "10"
-msgstr ""
+msgstr "10"
 
 #: src/ui_viewDialog.h:1145
 msgid "80"
-msgstr ""
+msgstr "80"
 
 #: src/ui_viewDialog.h:1146
 msgid "10000"
-msgstr ""
+msgstr "10000"
 
 #: src/ui_viewDialog.h:1147
 msgid "144000"
-msgstr ""
+msgstr "144000"
 
 #: src/ui_viewDialog.h:1149
 msgid "Constellations"
@@ -3026,7 +3026,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:804
 msgid "None"
-msgstr ""
+msgstr "Nullus"
 
 #: src/ui_configurationDialog.h:805
 msgid "Default options"
@@ -3123,7 +3123,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:844
 msgid "Other"
-msgstr ""
+msgstr "Altera"
 
 #: src/ui_configurationDialog.h:846
 msgid "Hides the mouse cursor when inactive"
@@ -3228,7 +3228,7 @@ msgstr ""
 #: src/ui_configurationDialog.h:890
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:518
 msgid "Cancel"
-msgstr ""
+msgstr "Abrogare"
 
 #: src/ui_configurationDialog.h:893
 msgid "Close window when script runs"
@@ -3256,11 +3256,11 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:911
 msgid "Navigation"
-msgstr ""
+msgstr "Navigatio"
 
 #: src/ui_configurationDialog.h:913
 msgid "Tools"
-msgstr ""
+msgstr "Instrumenta"
 
 #: src/ui_configurationDialog.h:915
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:441
@@ -3295,7 +3295,7 @@ msgstr ""
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:411
 #: plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h:309
 msgid "Remove"
-msgstr ""
+msgstr "Removere"
 
 #: src/ui_addRemoveLandscapesDialog.h:276
 msgid ""
@@ -3479,7 +3479,7 @@ msgstr ""
 
 #: src/ui_scriptConsole.h:373
 msgid "Output"
-msgstr ""
+msgstr "Produco"
 
 #: src/ui_scriptConsole.h:375
 msgid "Cursor position"
@@ -3491,7 +3491,7 @@ msgstr ""
 
 #: src/ui_scriptConsole.h:378
 msgid "..."
-msgstr ""
+msgstr "..."
 
 #: plugins/AngleMeasure/src/AngleMeasure.cpp:57
 msgid "Angle Measure"
@@ -3813,7 +3813,7 @@ msgstr ""
 #: plugins/Oculars/src/ui_ocularDialog.h:873
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:214
 msgid "General"
-msgstr ""
+msgstr "Generalis"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:874
 #: plugins/Oculars/src/ui_ocularDialog.h:882
@@ -3826,7 +3826,7 @@ msgstr ""
 #: plugins/Satellites/src/ui_satellitesImportDialog.h:211
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:407
 msgid "Add"
-msgstr ""
+msgstr "Addere"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:877
 #: plugins/Oculars/src/ui_ocularDialog.h:886
@@ -3834,7 +3834,7 @@ msgstr ""
 #: plugins/Satellites/src/ui_satellitesDialog.h:683
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:485
 msgid "Name:"
-msgstr ""
+msgstr "Nomen:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:878
 msgid "aFOV:"
@@ -4001,7 +4001,7 @@ msgstr ""
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:259
 msgid "Version"
-msgstr ""
+msgstr "Versio"
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:263
 msgid ""
@@ -4304,7 +4304,7 @@ msgstr ""
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:674
 msgid "Settings"
-msgstr ""
+msgstr "Accommodanda"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:676
 msgid "Display the selected satellite(s)"
@@ -4328,7 +4328,7 @@ msgstr ""
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:685
 msgid "Description:"
-msgstr ""
+msgstr "Descriptio:"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:686
 msgid "Groups:"
@@ -4433,11 +4433,11 @@ msgstr ""
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:56
 msgid "N/A"
-msgstr ""
+msgstr "N/A"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:57
 msgid "Starting"
-msgstr ""
+msgstr "Incipitur"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:58
 msgid "Connecting"
@@ -4469,19 +4469,19 @@ msgstr ""
 #. TRANSLATORS: Symbol for "number"
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:265
 msgid "#"
-msgstr ""
+msgstr "#"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:267
 msgid "Status"
-msgstr ""
+msgstr "Status"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:268
 msgid "Type"
-msgstr ""
+msgstr "Typus"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:269
 msgid "Name"
-msgstr ""
+msgstr "Nomen"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:284
 #, qt-format
@@ -4529,7 +4529,7 @@ msgstr ""
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:744
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:399
 msgid "Start"
-msgstr ""
+msgstr "Incipe"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:745
 msgid "Start the selected local telescope"
@@ -4537,7 +4537,7 @@ msgstr ""
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:750
 msgid "Stop"
-msgstr ""
+msgstr "Siste"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:751
 msgid "Stop the selected local telescope"
@@ -4545,7 +4545,7 @@ msgstr ""
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:756
 msgid "Connect"
-msgstr ""
+msgstr "Conectere"
 
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:757
 msgid "Connect to the selected telescope"
@@ -4741,7 +4741,7 @@ msgstr ""
 
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:517
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:398
 msgid "Telescopes Controlled"
@@ -5098,7 +5098,7 @@ msgstr ""
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:223
 msgid "Language"
-msgstr ""
+msgstr "Lingua"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:237
 msgid "Show stars"
@@ -5167,7 +5167,7 @@ msgstr ""
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:461
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:465
 msgid "Administration"
-msgstr ""
+msgstr "Administratio"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:470
 msgid "Load default configuration"
@@ -5187,7 +5187,7 @@ msgstr ""
 
 #: plugins/TextUserInterface/src/TuiNodeBool.cpp:72
 msgid "On"
-msgstr ""
+msgstr "Activus"
 
 #: plugins/TextUserInterface/src/TuiNodeBool.cpp:73
 msgid "Off"
